welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: object java.lang.String is not a value
var decalage: Int=String
                  ^Array2:20: error: type mismatch;
 found   : String
 required: Int
decalage= litMessage()
                    ^